--- a/2_Preprocessing_requant.ipynb
+++ b/2_Preprocessing_requant.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# `Preprocessing workflow`\n",
     "\n",
-    "#### The preprocessing workflow consists of nine steps:\n",
+    "#### The preprocessing workflow consists of seven steps:\n",
     "\n",
     "![Preprocessing.png](images/Preprocessing.png)"
    ]
@@ -452,7 +452,19 @@
    "source": [
     "### `Re-quantification`\n",
     "\n",
-    "- Split the ConsensusMap into features that have no missing values, and features that have at least one missing value; requantify only the missing values. "
+    "The re-quantification consists of 7 steps\n",
+    "\n",
+    "![Re-quantification.png](images/Re-quantification.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1550692a",
+   "metadata": {},
+   "source": [
+    "#### `1) Split consensus`\n",
+    "\n",
+    " Split the ConsensusMap into features that have no missing values, and features that have at least one missing value; requantify only the missing values. "
    ]
   },
   {
@@ -515,7 +527,7 @@
    "id": "86fda41a",
    "metadata": {},
    "source": [
-    "#### `8) MapAlignmentTransformer`\n",
+    "#### `2) MapAlignmentTransformer`\n",
     "This algorithm is used to perform a linear retention time alignment, in order to correct for chromatographic shifts in retention time. Use the trafo XML files from the feature alignment and align the raw spectra.\n",
     "\n",
     "###### Documentation: https://abibuilder.informatik.uni-tuebingen.de/archive/openms/Documentation/nightly/html/classOpenMS_1_1MapAlignmentTransformer.html"
@@ -556,7 +568,7 @@
    "id": "35c1520f",
    "metadata": {},
    "source": [
-    "#### `9) FeatureFinderMetaboIdent`\n",
+    "#### `3) FeatureFinderMetaboIdent: re-quantify`\n",
     "This algorithm detects and extracts MS1 data that match the feature list in the metabolite identification table.\n",
     "\n",
     "###### Documentation: https://abibuilder.informatik.uni-tuebingen.de/archive/openms/Documentation/nightly/html/UTILS_FeatureFinderMetaboIdent.html"
@@ -671,7 +683,9 @@
    "id": "3aadcf67",
    "metadata": {},
    "source": [
-    "##### Merge complete FeatureMaps from FFM with requantified FeatureMaps from FFMID"
+    "#### `4) Merge Feature maps`\n",
+    "\n",
+    "Merge complete FeatureMaps from FFM with requantified FeatureMaps from FFMID"
    ]
   },
   {
@@ -699,7 +713,7 @@
    "id": "63e58d2c",
    "metadata": {},
    "source": [
-    "#### `10) Metabolite adduct decharger` \n",
+    "#### `5) Metabolite adduct decharger` \n",
     "\n",
     "For each peak, this algorithm reconstructs neutral masses by enumerating all possible adducts with matching charge. You can add the list of adduct files and database files for the algorithm to parse through.\n",
     "With SIRIUS, an algorithm that is later used, you are only able to use singly charged adducts so charges higher than 1 are filtered out. \n",
@@ -740,7 +754,7 @@
    "id": "7c91ca40",
    "metadata": {},
    "source": [
-    "#### `11) IDMapper` \n",
+    "#### `6) IDMapper` \n",
     "\n",
     "Introduce the features to a protein identification file (idXML)- the only way to annotate MS2 spectra for GNPS FBMN  (of later importance)\n",
     "\n",
@@ -797,7 +811,7 @@
    "id": "80571ca1",
    "metadata": {},
    "source": [
-    "#### `12) FeatureGroupingAlgorithmKD `\n",
+    "#### `7) FeatureGroupingAlgorithmKD `\n",
     "\n",
     "Feature linker clusters the feature information (from single files) into a ConsensusFeature, linking features from different files together, which have a smiliar m/z and rt (no MS2 data).\n",
     "\n",
@@ -876,7 +890,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
