add requant notebook with pymetabo

--- a/2_Preprocessing_requant_pymetabo.ipynb
+++ b/2_Preprocessing_requant_pymetabo.ipynb
@@ -168,7 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Gap filling with FFMID"
+    "Requantification with FFMID"
    ]
   },
   {
@@ -177,16 +177,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FeatureMapHelper().FFMID_libraries_for_missing_features(os.path.join(interim,  \"FFM.consensusXML\"),\n",
-    "                                                    os.path.join(interim,  \"FFMID_libraries\"))\n",
+    "FeatureMapHelper().split_consensus_map(os.path.join(interim,  \"FFM.consensusXML\"),\n",
+    "                                    os.path.join(interim,  \"FFM_complete.consensusXML\"),\n",
+    "                                    os.path.join(interim,  \"FFM_missing.consensusXML\"))\n",
+    "\n",
+    "FeatureMapHelper().consensus_to_feature_maps(os.path.join(interim,  \"FFM_complete.consensusXML\"),\n",
+    "                                            os.path.join(interim, \"FFM_aligned\"),\n",
+    "                                            os.path.join(interim, \"FFM_complete\"))\n",
     "\n",
     "FeatureFinderMetaboIdent().run(os.path.join(interim, \"mzML_aligned\"),\n",
     "                            os.path.join(interim,  \"FFMID\"),\n",
-    "                            os.path.join(interim,  \"FFMID_libraries\"),\n",
+    "                            os.path.join(interim,  \"FFM_missing.consensusXML\"),\n",
     "                            {\"detect:peak_width\": 60.0})\n",
     "\n",
     "FeatureMapHelper().merge_feature_maps(os.path.join(interim, \"FeatureMaps_merged\"), os.path.join(\n",
-    "    interim, \"FFM\"), os.path.join(interim, \"FFMID\"))"
+    "    interim, \"FFM_complete\"), os.path.join(interim, \"FFMID\"))"
    ]
   },
   {
