--- a/2_Preprocessing_requant.ipynb
+++ b/2_Preprocessing_requant.ipynb
@@ -32,7 +32,6 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from pyopenms import *\n",
-    "import shutil\n",
     "import plotly.express as px"
    ]
   },
@@ -62,11 +61,9 @@
    "outputs": [],
    "source": [
     "path = os.path.join(\"results\", \"interim\", \"mzML\")\n",
-    "try:\n",
-    "    shutil.rmtree(path)\n",
-    "    os.mkdir(path)\n",
-    "except OSError:\n",
-    "    os.mkdir(path)\n",
+    "if not os.path.exists(path): # if it doesn't exist\n",
+    "    os.mkdir(os.path.join(\"results\", \"interim\")) # create a results/interim directory\n",
+    "    os.mkdir(path) # create a path directory\n",
     "\n",
     "input_original_files = glob.glob(os.path.join(\"data\", \"mzML\", \"*.mzML\"))\n",
     "\n",
@@ -135,12 +132,9 @@
    "outputs": [],
    "source": [
     "path = os.path.join(\"results\", \"interim\", \"Preprocessing\")\n",
-    "try:\n",
-    "    shutil.rmtree(path)\n",
-    "    os.mkdir(path)\n",
-    "except OSError:\n",
-    "    os.mkdir(path)\n",
-    "\n",
+    "if not os.path.exists(path): # if it doesn't exist\n",
+    "    os.mkdir(path) # create a path directory\n",
+    "    \n",
     "input_mzml_files = glob.glob(os.path.join(\"results\", \"interim\", \"mzML\", \"PCpeak_*.mzML\"))\n",
     "\n",
     "# 2) Mass trace detection\n",
@@ -210,11 +204,8 @@
     "input_feature_files = glob.glob(os.path.join(\"results\", \"interim\", \"Preprocessing\", \"FFM_*.featureXML\"))\n",
     "\n",
     "path = os.path.join(\"results\", \"features\")\n",
-    "try:\n",
-    "    shutil.rmtree(path)\n",
-    "    os.mkdir(path)\n",
-    "except OSError:\n",
-    "    os.mkdir(path)\n",
+    "if not os.path.exists(path): # if it doesn't exist\n",
+    "    os.mkdir(path) # create a path directory\n",
     "\n",
     "for filename in input_feature_files:\n",
     "    fmap = FeatureMap()\n",
@@ -475,11 +466,8 @@
    "outputs": [],
    "source": [
     "path = os.path.join(\"results\", \"interim\", \"Requantification\")\n",
-    "try:\n",
-    "    shutil.rmtree(path)\n",
-    "    os.mkdir(path)\n",
-    "except OSError:\n",
-    "    os.mkdir(path)\n",
+    "if not os.path.exists(path): # if it doesn't exist\n",
+    "    os.mkdir(path) # create a path directory\n",
     "    \n",
     "# split ConsensusMap\n",
     "consensus_map = ConsensusMap()\n",
@@ -890,7 +878,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
