--- a/2_Preprocessing_requant.ipynb
+++ b/2_Preprocessing_requant.ipynb
@@ -14,6 +14,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d4f20767",
+   "metadata": {},
+   "source": [
+    "At the end of the workflow, you can delete the interim directory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "52d77bcb",
    "metadata": {},
    "source": [
