--- a/4_GNPSExport.ipynb
+++ b/4_GNPSExport.ipynb
@@ -62,7 +62,7 @@
     "# Create a metadata table from the list of mzML files \n",
     "\n",
     "metadata = pd.DataFrame()\n",
-    "metadata[\"filename\"] = [file for file in os.listdir(\"Example_data\") if file.endswith(\".mzML\")]\n",
+    "metadata[\"filename\"] = [file for file in os.listdir(os.path.join(\"data\", \"mzML\")) if file.endswith(\".mzML\")]\n",
     "metadata[\"ATTRIBUTE_MAPID\"]= [\"MAP\" + str(i) for i in range(len(metadata))]\n",
     "metadata['ATTRIBUTE_genomeID']=metadata['filename'].str.extract(r'(NBC_?\\d*)')\n",
     "metadata['ATTRIBUTE_genomeIDMDNA']=metadata['filename'].str.extract(r'(MDNAWGS?\\d*|MDNA_WGS_?\\d*)')\n",
@@ -287,15 +287,8 @@
     "            df.loc[i, \"partners\"] += df.loc[j, \"FEATURE_ID\"]\n",
     "            df.loc[j, \"partners\"] += df.loc[i, \"FEATURE_ID\"]\n",
     "df = df.drop([\"sequence\", \"LinkedGroups\"], axis=1)\n",
-    "df.to_csv(os.path.join(\"results\",\"GNPSexport\", \"table.tsv\"), sep=\"\\t\", index=False)"
+    "df.to_csv(os.path.join(\"results\",\"GNPSexport\", \"SuppPairs.tsv\"), sep=\"\\t\", index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -317,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
