only shutil interim dir

--- a/6_Data_analysis_extras.ipynb
+++ b/6_Data_analysis_extras.ipynb
@@ -482,7 +482,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lower_val.to_csv(\"lower_val.csv\", sep=\"\\t\")\n",
+    "lower_val.to_csv(os.path.join(path, \"lower_val.csv\"), sep=\"\\t\")\n",
     "lower_val"
    ]
   },
@@ -503,7 +503,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lower_val= pd.read_csv(\"lower_val.csv\", sep=\"\\t\")\n",
+    "lower_val= pd.read_csv(os.path.join(path, \"lower_val.csv\"), sep=\"\\t\")\n",
     "Matrix_scaled= pd.merge(Matrix_scaled, lower_val, on=\"Feature_ID\")\n",
     "Matrix_scaled= Matrix_scaled.set_index(\"Feature_ID\")\n",
     "Matrix_scaled= Matrix_scaled.round(decimals=5)\n",
@@ -539,7 +539,7 @@
     "outliers= outliers.transpose()\n",
     "outliers= outliers.dropna(how=\"all\")\n",
     "outliers= outliers.transpose()\n",
-    "outliers.to_csv(\"outliers.csv\", sep=\"\\t\")\n",
+    "outliers.to_csv(os.path.join(path, \"outliers.csv\"), sep=\"\\t\")\n",
     "outliers"
    ]
   },
@@ -556,7 +556,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df= pd.read_csv(\"resources/MS2_LIBRARYSEARCH_all_identifications.tsv\", sep='\\t', encoding='latin-1')\n",
+    "df= pd.read_csv(os.path.join(\"resources\", \"MS2_LIBRARYSEARCH_all_identifications.tsv\"), sep='\\t', encoding='latin-1')\n",
     "df.drop(df.index[df['IonMode'] == \"negative\"], inplace=True)\n",
     "df.drop(df.index[df['MZErrorPPM'] > 20.0], inplace=True)\n",
     "GNPS=df.drop(columns=[\"PI\", \"Adduct\", \"IonMode\", \"Organism\", \"MZErrorPPM\", \"SpecMZ\"])\n",
@@ -583,7 +583,7 @@
     "                hits.append(hit)\n",
     "    outliers['GNPS_IDs'][i] = ' ## '.join(hits)\n",
     "\n",
-    "outliers.to_csv(\"GNPS_annotated_outliers.tsv\", sep='\\t', index = False)\n",
+    "outliers.to_csv(os.path.join(\"results\", \"annotations\", \"GNPS_annotated_outliers.tsv\"), sep='\\t', index = False)\n",
     "outliers"
    ]
   },
@@ -593,58 +593,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "outliers_df= outliers_df[outliers_df.GNPS_IDs == '']\n",
-    "outliers_df= outliers_df.drop(columns= \"GNPS_IDs\")\n",
-    "outliers_df= outliers_df.set_index([\"mz\", \"RT\"])\n",
-    "outliers_df_tocsv= outliers_df.reset_index()\n",
-    "outliers_df_tocsv.to_csv(\"outliers_df_unknowns.tsv\", sep=\"\\t\", index =None)\n",
-    "outliers_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df= df.drop(columns=\"Feature_ID\")\n",
-    "cols=outliers_df.columns\n",
-    "idx=outliers_df.index\n",
-    "df= df.filter(cols)\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df=df.loc[idx]\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df= df.transpose()\n",
-    "df_csv= df.reset_index()\n",
-    "df_csv.to_csv(\"df_outlier_ft.csv\", sep=\"\\t\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "atratus= pd.read_csv(\"df_outlier_ft.csv\", sep=\"\\t\", index_col= \"Unnamed: 0\")\n",
-    "atratus= atratus.set_index([\"mz\", \"RT\"])\n",
-    "atratus"
+    "outliers= outliers[outliers.GNPS_IDs == '']\n",
+    "outliers= outliers.drop(columns= \"GNPS_IDs\")\n",
+    "outliers= outliers.set_index([\"mz\", \"RT\"])\n",
+    "outliers_tocsv= outliers.reset_index()\n",
+    "outliers_tocsv.to_csv(os.path.join(\"results\", \"annotations\", \"outliers_unknowns.tsv\"), sep=\"\\t\", index =None)\n",
+    "outliers"
    ]
   }
  ],
