path simplification and num_of_masstraces FFMide

--- a/2_Preprocessing_requant.ipynb
+++ b/2_Preprocessing_requant.ipynb
@@ -36,9 +36,12 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import shutil\n",
     "import glob\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import sys\n",
+    "sys.path.insert(0, '/home/eeko/openms-develop/openms-build/pyOpenMS')\n",
     "from pyopenms import *\n",
     "import plotly.express as px"
    ]
@@ -68,10 +71,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = os.path.join(\"results\", \"interim\", \"mzML\")\n",
-    "if not os.path.exists(path): # if it doesn't exist\n",
-    "    os.mkdir(os.path.join(\"results\", \"interim\")) # create a results/interim directory\n",
-    "    os.mkdir(path) # create a path directory\n",
+    "interim= os.path.join(\"results\", \"interim\")\n",
+    "path = os.path.join(interim, \"mzML\")\n",
+    "\n",
+    "if os.path.exists(path):\n",
+    "    shutil.rmtree(interim)\n",
+    "    os.mkdir(interim)\n",
+    "else: \n",
+    "    os.mkdir(path)\n",
     "\n",
     "input_original_files = glob.glob(os.path.join(\"data\", \"mzML\", \"*.mzML\"))\n",
     "\n",
@@ -139,11 +146,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = os.path.join(\"results\", \"interim\", \"Preprocessing\")\n",
+    "path = os.path.join(interim, \"Preprocessing\")\n",
     "if not os.path.exists(path): # if it doesn't exist\n",
     "    os.mkdir(path) # create a path directory\n",
     "    \n",
-    "input_mzml_files = glob.glob(os.path.join(\"results\", \"interim\", \"mzML\", \"PCpeak_*.mzML\"))\n",
+    "input_mzml_files = glob.glob(os.path.join(interim, \"mzML\", \"PCpeak_*.mzML\"))\n",
     "\n",
     "# 2) Mass trace detection\n",
     "\n",
@@ -209,7 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_feature_files = glob.glob(os.path.join(\"results\", \"interim\", \"Preprocessing\", \"FFM_*.featureXML\"))\n",
+    "input_feature_files = glob.glob(os.path.join(interim, \"Preprocessing\", \"FFM_*.featureXML\"))\n",
     "\n",
     "path = os.path.join(\"results\", \"features\")\n",
     "if not os.path.exists(path): # if it doesn't exist\n",
@@ -232,7 +239,7 @@
    "source": [
     "#### `5) PrecursorCorrection (To the \"nearest feature”)`\n",
     "\n",
-    "This algorithm is used after feature detection and adduct grouping to allow for precursor correction on MS2 level. \n",
+    "This algorithm is used after feature detection to allow for precursor correction on MS2 level. \n",
     "\n",
     "If there are MS2 spectra in the feature space which have been measured in isotope traces, it “corrects” the MS2 spectrum annotation to the monoisotopic trace. \n",
     "\n",
@@ -246,10 +253,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = os.path.join(\"results\", \"interim\", \"mzML\")\n",
+    "path = os.path.join(interim, \"mzML\")\n",
     "\n",
-    "input_mzml_files = glob.glob(os.path.join(\"results\", \"interim\", \"mzML\", \"PCpeak_*.mzML\"))\n",
-    "input_feature_files = glob.glob(os.path.join(\"results\", \"interim\", \"Preprocessing\", \"FFM_*.featureXML\"))\n",
+    "input_mzml_files = glob.glob(os.path.join(interim, \"mzML\", \"PCpeak_*.mzML\"))\n",
+    "input_feature_files = glob.glob(os.path.join(interim, \"Preprocessing\", \"FFM_*.featureXML\"))\n",
     "\n",
     "for mzml in input_mzml_files:\n",
     "    exp = MSExperiment()\n",
@@ -283,9 +290,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = os.path.join(\"results\", \"interim\", \"Preprocessing\")\n",
+    "path = os.path.join(interim, \"Preprocessing\")\n",
     "\n",
-    "input_feature_files = glob.glob(os.path.join(\"results\", \"interim\", \"Preprocessing\", \"FFM_*.featureXML\"))\n",
+    "input_feature_files = glob.glob(os.path.join(interim, \"Preprocessing\", \"FFM_*.featureXML\"))\n",
     "feature_maps=[]\n",
     "for filename in input_feature_files:\n",
     "    feature_map_MFD = FeatureMap()\n",
@@ -383,7 +390,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_feature_files = glob.glob(os.path.join(\"results\", \"interim\", \"Preprocessing\", \"MapAligned_*.featureXML\"))\n",
+    "input_feature_files = glob.glob(os.path.join(interim, \"Preprocessing\", \"MapAligned_*.featureXML\"))\n",
     "\n",
     "feature_maps = []\n",
     "for featurexml_file in input_feature_files:\n",
@@ -473,13 +480,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = os.path.join(\"results\", \"interim\", \"Requantification\")\n",
+    "path = os.path.join(interim, \"Requantification\")\n",
     "if not os.path.exists(path): # if it doesn't exist\n",
     "    os.mkdir(path) # create a path directory\n",
     "    \n",
     "# split ConsensusMap\n",
     "consensus_map = ConsensusMap()\n",
-    "ConsensusXMLFile().load(os.path.join(\"results\", \"interim\", \"Preprocessing\", \"consensus\" + \".consensusXML\"), consensus_map)\n",
+    "ConsensusXMLFile().load(os.path.join(interim, \"Preprocessing\", \"consensus\" + \".consensusXML\"), consensus_map)\n",
     "\n",
     "headers = consensus_map.getColumnHeaders()\n",
     "\n",
@@ -536,13 +543,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path= os.path.join(\"results\", \"interim\", \"Requantification\")\n",
+    "path= os.path.join(interim, \"Requantification\")\n",
     "isExist= os.path.exists(path)\n",
     "if not isExist:\n",
     "    os.mkdir(path)\n",
     "\n",
-    "input_mzml_files = sorted(glob.glob(os.path.join(\"results\", \"interim\", \"mzML\", \"PCfeature_*.mzML\")))\n",
-    "input_trafo = sorted(glob.glob(os.path.join(\"results\", \"interim\", \"Preprocessing\", \"*.trafoXML\")))\n",
+    "input_mzml_files = sorted(glob.glob(os.path.join(interim, \"mzML\", \"PCfeature_*.mzML\")))\n",
+    "input_trafo = sorted(glob.glob(os.path.join(interim, \"Preprocessing\", \"*.trafoXML\")))\n",
     "\n",
     "for filename in input_mzml_files:\n",
     "    exp= MSExperiment()\n",
@@ -568,6 +575,13 @@
     "This algorithm detects and extracts MS1 data that match the feature list in the metabolite identification table.\n",
     "\n",
     "###### Documentation: https://abibuilder.informatik.uni-tuebingen.de/archive/openms/Documentation/nightly/html/UTILS_FeatureFinderMetaboIdent.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### `3) (i) Create a library of metabolites`"
    ]
   },
   {
@@ -648,6 +662,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "interim= os.path.join(\"results\", \"interim\")\n",
+    "path= os.path.join(interim, \"Requantification\")\n",
     "input_mzml_files=sorted(glob.glob(os.path.join(path, \"*.mzML\")))\n",
     "\n",
     "# load ms data from mzML file into MSExperiment\n",
@@ -656,18 +672,26 @@
     "    MzMLFile().load(mzml_file, spectra)\n",
     "\n",
     "    # create FeatureFinderAlgorithmMetaboIdent and assign ms data\n",
-    "    ff = FeatureFinderAlgorithmMetaboIdent()\n",
-    "    ff.setMSData(spectra)\n",
+    "    ffmid = FeatureFinderAlgorithmMetaboIdent()\n",
+    "    ffmid.setMSData(spectra)\n",
     "\n",
-    "    params = ff.getParameters()\n",
+    "    params = ffmid.getParameters()\n",
     "    params[b\"extract:mz_window\"] = 10.0 \n",
     "    params[b\"detect:peak_width\"] = 60.0  #adjust for wide peaks\n",
-    "    ff.setParameters(params)\n",
+    "    ffmid.setParameters(params)\n",
     "    # FeatureMap to store results\n",
     "    fm = FeatureMap()\n",
+    "\n",
     "    # run the FeatureFinderMetaboIdent with the metabo_table and store results in fm\n",
     "    metabo_table = metaboTableFromFile(os.path.join(path, \"MetaboliteIdentification.tsv\"))\n",
-    "    ff.run(metabo_table, fm, String(mzml_file))\n",
+    "    ffmid.run(metabo_table, fm, String(mzml_file))\n",
+    "    # set number of mass traces (for SIRIUS)\n",
+    "    fm_include_mass_traces = FeatureMap(fm)\n",
+    "    fm_include_mass_traces.clear(False)\n",
+    "    for feature in fm:\n",
+    "        feature.setMetaValue(\"num_of_masstraces\", params[b\"extract:n_isotopes\"])\n",
+    "        fm_include_mass_traces.push_back(feature)\n",
+    "    fm = fm_include_mass_traces\n",
     "    \n",
     "    # save FeatureMap to file\n",
     "    ff_file = os.path.join(path, \"FFMID_\" + os.path.basename(mzml_file)[11:-5] +\".featureXML\")\n",
@@ -869,10 +893,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "edde62aa2661007f0756e9790e7a328c288a583bf6ce768a355147dac67c8db8"
+   "hash": "1d92193107b2c1fde5349325fa7e4180df63966062ebb6172612daf2925f9acf"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.10 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -886,7 +910,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
