--- a/3_SIRIUS_CSI.ipynb
+++ b/3_SIRIUS_CSI.ipynb
@@ -17,21 +17,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Determination of memory status is not supported on this \n",
-      " platform, measuring for memoryleaks will never fail\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import glob\n",
+    "import sys\n",
+    "sys.path.insert(0, '/home/eeko/openms-develop/openms-build/pyOpenMS')\n",
     "from pyopenms import *\n",
     "import shutil"
    ]
@@ -77,29 +70,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "7e793c80",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/Users/eeko/Desktop/pyOpenMS_untargeted_metabolomics/3_SIRIUS_CSI.ipynb Cell 5'\u001b[0m in \u001b[0;36m<cell line: 12>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eeko/Desktop/pyOpenMS_untargeted_metabolomics/3_SIRIUS_CSI.ipynb#ch0000004?line=11'>12</a>\u001b[0m \u001b[39mfor\u001b[39;00m file \u001b[39min\u001b[39;00m feature_files:\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eeko/Desktop/pyOpenMS_untargeted_metabolomics/3_SIRIUS_CSI.ipynb#ch0000004?line=12'>13</a>\u001b[0m     fmap \u001b[39m=\u001b[39m FeatureMap()\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/eeko/Desktop/pyOpenMS_untargeted_metabolomics/3_SIRIUS_CSI.ipynb#ch0000004?line=13'>14</a>\u001b[0m     FeatureXMLFile()\u001b[39m.\u001b[39;49mload(file, fmap)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eeko/Desktop/pyOpenMS_untargeted_metabolomics/3_SIRIUS_CSI.ipynb#ch0000004?line=14'>15</a>\u001b[0m     feature_maps\u001b[39m.\u001b[39mappend(fmap)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/eeko/Desktop/pyOpenMS_untargeted_metabolomics/3_SIRIUS_CSI.ipynb#ch0000004?line=16'>17</a>\u001b[0m \u001b[39mfor\u001b[39;00m filename \u001b[39min\u001b[39;00m input_mzml_files:\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "path = os.path.join(\"results\", \"interim\", \"Sirius\")\n",
-    "try:\n",
-    "    shutil.rmtree(path)\n",
-    "    os.mkdir(path)\n",
-    "except OSError:\n",
-    "    os.mkdir(path)\n",
+    "if not os.path.exists(path): # if it doesn't exist\n",
+    "    os.mkdir(path) # create a path directory\n",
     "\n",
     "feature_files = sorted(glob.glob(os.path.join(\"results\", \"interim\", \"Requantification\", \"MFD_*.featureXML\")))\n",
     "input_mzml_files = sorted(glob.glob(os.path.join(\"results\", \"interim\", \"Requantification\", \"MapAligned_*.mzML\")))\n",
@@ -279,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
