--- a/2_Preprocessing_requant_pymetabo.ipynb
+++ b/2_Preprocessing_requant_pymetabo.ipynb
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Precursor Peak Correction (TODO: add to pymetabo)"
+    "Precursor Correction to highest intensity"
    ]
   },
   {
@@ -44,19 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mzML_files = os.listdir(mzML_dir)\n",
-    "\n",
-    "Helper().reset_directory(os.path.join(interim, \"mzML_PCpeak\"))\n",
-    "for filename in mzML_files:\n",
-    "    exp = MSExperiment()\n",
-    "    MzMLFile().load(os.path.join(mzML_dir, filename), exp)\n",
-    "    exp.sortSpectra(True)\n",
-    "    delta_mzs= []\n",
-    "    mzs = []\n",
-    "    rts= []\n",
-    "    PrecursorCorrection.correctToHighestIntensityMS1Peak(exp, 100.0, True, delta_mzs, mzs, rts)\n",
-    "    mzmlfile_path = os.path.join(os.path.join(interim, \"mzML_PCpeak\"), filename)\n",
-    "    MzMLFile().store(mzmlfile_path, exp)"
+    "PrecursorCorrector().to_highest_intensity(mzML_dir, os.path.join(interim, \"mzML_PCpeak\"))"
    ]
   },
   {
@@ -83,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Precursor Correction to nearest feature (TODO: add in pymetabo)\n"
+    "Precursor Correction to nearest feature\n"
    ]
   },
   {
@@ -92,22 +80,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Helper().reset_directory(os.path.join(interim, \"mzML_PCfeature\"))\n",
-    "mzML_files = os.listdir(os.path.join(interim, \"mzML_PCpeak\"))\n",
-    "feature_files = os.listdir(os.path.join(interim, \"FFM\"))\n",
-    "for mzml in mzML_files:\n",
-    "    exp = MSExperiment()\n",
-    "    MzMLFile().load(os.path.join(interim, \"mzML_PCpeak\", mzml), exp)\n",
-    "    exp.sortSpectra(True)\n",
-    "    correct = PrecursorCorrection()\n",
-    "\n",
-    "    for filename in feature_files:\n",
-    "        feature_map_MFD = FeatureMap()\n",
-    "        FeatureXMLFile().load(os.path.join(interim, \"FFM\", filename), feature_map_MFD)\n",
-    "        if os.path.basename(mzml)[:-5] == os.path.basename(filename)[:-11]:\n",
-    "            correct.correctToNearestFeature(feature_map_MFD, exp, 0.0, 100.0, True, False, False, False, 3, 0)\n",
-    "            corrected_file = os.path.join(interim, \"mzML_PCfeature\", mzml)\n",
-    "            MzMLFile().store(corrected_file, exp)"
+    "PrecursorCorrector().to_nearest_feature(os.path.join(interim, \"mzML_PCpeak\"),\n",
+    "                                        os.path.join(interim, \"mzML_PCfeature\"),\n",
+    "                                        os.path.join(interim, \"FFM\"))"
    ]
   },
   {
@@ -262,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4
  },
