--- a/2_Preprocessing_requant_pymetabo.ipynb
+++ b/2_Preprocessing_requant_pymetabo.ipynb
@@ -26,9 +26,18 @@
    "outputs": [],
    "source": [
     "mzML_dir = \"data/mzML\"\n",
-    "\n",
     "results = \"results\"\n",
     "interim = Helper().reset_directory(os.path.join(results, \"interim\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for mzml in os.listdir(mzML_dir):\n",
+    "    print(mzml)"
    ]
   },
   {
@@ -216,6 +225,15 @@
     "DataFrames().create_consensus_table(os.path.join(\n",
     "    interim, \"FeatureMatrix.consensusXML\"), os.path.join(results, \"FeatureMatrix.tsv\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Sirius().run()"
+   ]
   }
  ],
  "metadata": {
@@ -237,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
