--- a/4_GNPSExport.ipynb
+++ b/4_GNPSExport.ipynb
@@ -15,9 +15,8 @@
    "source": [
     "import os\n",
     "import glob\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from pyopenms import *"
+    "from pyopenms import *\n",
+    "import pandas as pd"
    ]
   },
   {
