--- a/5_Annotation.ipynb
+++ b/5_Annotation.ipynb
@@ -70,6 +70,7 @@
     "    Features_flt=DF_features.filter(regex=fr\"{medium}\")\n",
     "    blanks= Features_flt.filter(regex=\"blank\", axis= 1) \n",
     "    blanks = blanks.fillna(0)\n",
+    "    blanks= blanks.transpose()\n",
     "    dictionary = {}\n",
     "    cols= blanks.columns\n",
     "    for i, col in enumerate(cols):\n",
@@ -354,8 +355,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_formulas = glob.glob(os.path.join(\"results\", \"formulas\", \"formulas_*.csv\"))\n",
-    "input_structures = glob.glob(os.path.join(\"results\", \"structures\", \"structures_*.csv\"))"
+    "input_formulas = glob.glob(os.path.join(\"results\", \"interim\", \"Sirius\", \"formulas_*.csv\"))\n",
+    "input_structures = glob.glob(os.path.join(\"results\", \"interim\", \"Sirius\", \"structures_*.csv\"))"
    ]
   },
   {
@@ -386,7 +387,6 @@
     "    df= df.drop(columns= cols_opt)\n",
     "    df=df.reset_index()\n",
     "    list_of_df.append(df)\n",
-    "\n",
     "DF_SIRIUS= pd.concat(list_of_df,ignore_index=True)\n",
     "DF_SIRIUS= DF_SIRIUS.drop(columns=\"index\")\n",
     "df_formulas= DF_SIRIUS.rename(columns= {\"chemical_formula\": \"formulas\", \"exp_mass_to_charge\": \"mz\", \"retention_time\": \"RT\"})\n",
@@ -412,7 +412,7 @@
     "        mass_delta = (abs(mz_0 - mz_1)/mz_0)*1000000\n",
     "        maxdeltaRT = time_0 + 30.0\n",
     "        mindeltaRT = time_0 - 30.0\n",
-    "        if (mindeltaRT<= time_1 <= maxdeltaRT) & (mass_delta<= 20.0):\n",
+    "        if (mindeltaRT<= time_1 <= maxdeltaRT) & (mass_delta<= 10.0):\n",
     "            pass\n",
     "        else:\n",
     "            m= df_sirius.iloc[i]\n",
@@ -482,7 +482,7 @@
     "        mass_delta = (abs(mz_0 - mz_1)/mz_0)*1000000\n",
     "        maxdeltaRT = time_0 + 30.0\n",
     "        mindeltaRT = time_0 - 30.0\n",
-    "        if (mindeltaRT<= time_1 <= maxdeltaRT) & (mass_delta<= 20.0):\n",
+    "        if (mindeltaRT<= time_1 <= maxdeltaRT) & (mass_delta<= 10.0):\n",
     "            pass\n",
     "        else:\n",
     "            m= df_CSI.iloc[i]\n",
@@ -531,7 +531,7 @@
     "    hits3=[]\n",
     "    for name, smiles, formula, Pred_mz, Pred_rt, in zip(DF_CSI_final[\"description\"], DF_CSI_final[\"smiles\"], DF_CSI_final[\"formulas\"], DF_CSI_final[\"exp_mass_to_charge\"], DF_CSI_final[\"retention_time\"]):\n",
     "        mass_delta = (abs(Pred_mz-mz)/Pred_mz)*1000000.0 if Pred_mz != 0 else 0\n",
-    "        if (Pred_rt >= rt-30.0) & (Pred_rt <= rt+30.0) & (mass_delta<= 20.0):\n",
+    "        if (Pred_rt >= rt-30.0) & (Pred_rt <= rt+30.0) & (mass_delta<= 10.0):\n",
     "            hit1 = f\"{name}\"\n",
     "            hit2 = f\"{formula}\"\n",
     "            hit3= f\"{smiles}\"\n",
@@ -557,7 +557,7 @@
     "    hits = []\n",
     "    for name, Pred_mz, Pred_rt, in zip(DF_SIRIUS_final[\"formulas\"], DF_SIRIUS_final[\"mz\"], DF_SIRIUS_final[\"RT\"]):\n",
     "        mass_delta = (abs(Pred_mz-mz)/Pred_mz)*1000000.0 if Pred_mz != 0 else 0\n",
-    "        if (Pred_rt >= rt-30.0) & (Pred_rt <= rt+30.0) & (mass_delta<= 20.0):\n",
+    "        if (Pred_rt >= rt-30.0) & (Pred_rt <= rt+30.0) & (mass_delta<= 10.0):\n",
     "            hit = f\"{name}\"\n",
     "            if hit not in hits:\n",
     "                hits.append(hit)\n",
