--- a/3_SIRIUS_CSI.ipynb
+++ b/3_SIRIUS_CSI.ipynb
@@ -23,8 +23,6 @@
    "source": [
     "import os\n",
     "import glob\n",
-    "import sys\n",
-    "sys.path.insert(0, '/home/eeko/openms-develop/openms-build/pyOpenMS')\n",
     "from pyopenms import *\n",
     "import shutil"
    ]
@@ -34,8 +32,6 @@
    "id": "14b8a4ae",
    "metadata": {},
    "source": [
-    "We need to pre-process the MSExperiments() again without using convex hulls this time, otherwise the results from SIRIUS are incorrect\n",
-    "\n",
     "#### `1) SIRIUS Adapter`\n",
     "The SIRIUS function is optional and includes the SIRIUS Adapter Algorithm from the Boecher lab. \n",
     "\n",
@@ -105,7 +101,7 @@
     "            \n",
     "            featureinfo = os.path.join(path, 'MFD_ncv_' + os.path.basename(filename)[11:-5] + \".featureXML\")\n",
     "            FeatureXMLFile().store(featureinfo, fm_no_sub)\n",
-    "\n",
+    "        \n",
     "            sirius_algo = SiriusAdapterAlgorithm()\n",
     "            sirius_algo_par = sirius_algo.getDefaults()\n",
     "            sirius_algo_par.setValue(\"preprocessing:filter_by_num_masstraces\", 2) #Number of mass traces each feature has to have to be included\n",
@@ -144,7 +140,7 @@
     "                        compound_info)\n",
     "\n",
     "            out_csifingerid = os.path.join(path, \"structures_\" + os.path.basename(filename)[19:-5] +\".mzTab\")\n",
-    "            executable= shutil.which(\"sirius\")\n",
+    "            executable = shutil.which(\"sirius\")\n",
     "            subdirs = sirius_algo.callSiriusQProcess(String(sirius_tmp.getTmpMsFile()),\n",
     "                                                    String(sirius_tmp.getTmpOutDir()),\n",
     "                                                    String(executable),\n",
@@ -240,10 +236,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "1d92193107b2c1fde5349325fa7e4180df63966062ebb6172612daf2925f9acf"
+   "hash": "edde62aa2661007f0756e9790e7a328c288a583bf6ce768a355147dac67c8db8"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.10 ('base')",
+   "display_name": "Python 3.10.4 ('pyopenms')",
    "language": "python",
    "name": "python3"
   },
@@ -257,7 +253,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4
  },
