corrections on metabo library

--- a/2_Preprocessing_requant.ipynb
+++ b/2_Preprocessing_requant.ipynb
@@ -585,6 +585,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "94d57498",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interim= os.path.join(\"results\", \"interim\")\n",
+    "\n",
+    "path = os.path.join(interim, \"Requantification\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4abbdf07",
    "metadata": {},
    "outputs": [],
@@ -595,25 +607,21 @@
     "\n",
     "DF_features= DF_features.rename(columns={ \"charge\":\"Charge\", \"mz\": \"Mass\", \"RT\": \"RetentionTime\"})\n",
     "\n",
-    "for ind in DF_features.index:\n",
-    "    if DF_features[\"Charge\"][ind] == 0:\n",
-    "        DF_features.loc[ind, \"Mass\"]= DF_features.loc[ind,\"Mass\"]- 1.007825\n",
-    "    if DF_features[\"Charge\"][ind] == 1:\n",
-    "        DF_features.loc[ind, \"Mass\"]= DF_features.loc[ind,\"Mass\"]- 1.007825\n",
-    "    if DF_features[\"Charge\"][ind] == 2:\n",
-    "        DF_features.loc[ind, \"Mass\"]= (DF_features.loc[ind,\"Mass\"]*2)- 2.015650\n",
-    "    if DF_features[\"Charge\"][ind] == 3:\n",
-    "        DF_features.loc[ind, \"Mass\"]= (DF_features.loc[ind,\"Mass\"]*3)- 3.023475\n",
-    "\n",
     "DF_features[\"Charge\"]= DF_features[\"Charge\"].astype(str)\n",
+    "DF_features[\"Mass\"]= DF_features[\"Mass\"].astype(float)\n",
+    "\n",
     "for ind in DF_features.index:\n",
     "    if DF_features[\"Charge\"][ind] == \"0\":\n",
+    "        DF_features.loc[ind, \"Mass\"]= DF_features.loc[ind,\"Mass\"]- 1.007825\n",
     "        DF_features.loc[ind, \"Charge\"]= \"+1\"\n",
     "    if DF_features[\"Charge\"][ind] == \"1\":\n",
+    "        DF_features.loc[ind, \"Mass\"]= DF_features.loc[ind,\"Mass\"]- 1.007825\n",
     "        DF_features.loc[ind, \"Charge\"]= \"+\" + DF_features.loc[ind,\"Charge\"]\n",
     "    if DF_features[\"Charge\"][ind] == \"2\":\n",
+    "        DF_features.loc[ind, \"Mass\"]= (DF_features.loc[ind,\"Mass\"]*2)- 2.015650\n",
     "        DF_features.loc[ind, \"Charge\"]= \"+\" + DF_features.loc[ind,\"Charge\"]\n",
     "    if DF_features[\"Charge\"][ind] == \"3\":\n",
+    "        DF_features.loc[ind, \"Mass\"]= (DF_features.loc[ind,\"Mass\"]*3)- 3.023475\n",
     "        DF_features.loc[ind, \"Charge\"]= \"+\" + DF_features.loc[ind,\"Charge\"]\n",
     "\n",
     "DF_features[\"CompoundName\"] = np.arange(len(DF_features))\n",
